2015-10-21  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (inventory_unlocked): Can returen all
	  slot (even those not in use-slot)
	* perl/Amanda/Recovery/Scan.pm (find_volume): Use only allowed slot

2015-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amanda-devices.7.xml: Add STANDARD_IA storage_class

2015-10-19  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/amgtar.c Default SPARSE value is NO if tar < 1.28

2015-10-16  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Use '--blocking-factor 64' when creating
	  a tar file

2015-10-15  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c, server-src/amcheck.c: Change the
	  "running as user \"%s\" instead of \"%s\""" message

2015-10-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Remember the level of the last
	  backup and use it to find the corresponding statefile.

2015-10-07  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/flags.m4: Use $CC

2015-09-29  Jean-Louis Martineau <martineau@zmanda.com>
	Patch by Orion Poplawski
	* man/xml-source/tapelist.5.xml: Fix duplicate word

2015-09-28  Jean-Louis Martineau <martineau@zmanda.com>
	* ndmp-src/ndmjob_main_util.c: Always quote log message.

2015-09-23  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amrmtape.pl: Fix if the device can't be opened

2015-09-22  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/Makefile.am: Fix CFLAGS for compiling amcrc32c.c

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Fix for 32 bits

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcrc32chw.c: Qulify crc32vc_add_hw argument as
	  G_GNUC_UNUSED
	* common-src/util.c: Define get_sse42 only if we use it
	* common-src/crc32-test.c: Fix if not in 64 bits mode

2015-09-18  Jean-Louis Martineau <martineau@zmanda.com>